--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <div id="home">
   <div class="container">
     <div class="photo">
-      <img src="/images/profilepic.jpeg" alt="Profile Picture">
+      <img src="images/profilepic.jpeg" alt="Profile Picture">
     </div>
 </div>
 <div id="about_me">
