--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
       <a class="navbar-brand" href="#">My Resume</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#home">Home</a></li>
-        <li><a href="#education">Education</a></li>
-	<li><a href="#education">home</a></li>
-	<li><a href="#education">about_me</a></li>
+        <li class="active"><a href="#home">Home</a></li>
+	<li><a href="#about_me">About Me</a></li>
+        <li><a href="#skill">Skills</a></li>
         <li><a href="#experience">Experience</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
@@ -97,35 +97,32 @@
     </div>
 </div>
 <div id="about_me">
-    <h1 style="color: #007bff;">Anonymous</h1>
+    <h1 style="color: #007bff;">Ayush Kumar</h1>
     <h2 style="color: #007bff;">About Me</h2>
     <p>Hello, my name is Ayush Kumar. I am a highly motivated individual with a passion for learning and problem-solving.
-      I have a strong background in web development, including HTML, CSS, and JavaScript.</p>
+      I have a strong background in web development, including HTML, CSS, and JavaScript and JAVA.</p>
 </div>
 <div id="skill">
     <h2 style="color: #007bff;">Skills</h2>
     <ul>
       <li>HTML5</li>
-      <li>CSS3</li>
+      <li>CSS</li>
       <li>JavaScript</li>
       <li>Responsive Web Design</li>
       <li>Version Control (Git)</li>
+      <li>JAVA</li>
     </ul>
 </div>
 <div id="experience">
     <h2 style="color: #007bff;" >Experience</h2>
-    <h3>Web Developer - ABC Company</h3>
-    <p><em>Month Year - Month Year</em></p>
     <ul>
       <li>Developed and maintained company website using HTML, CSS, and JavaScript.</li>
-      <li>Collaborated with the design team to implement new features and improve user experience.</li>
-      <li>Performed website optimization for better performance and SEO.</li>
     </ul>
 </div>
 <div id="education">
     <h2 style="color: #007bff;">Education</h2>
-    <h3>Bachelor of Science in Computer Science - XYZ University</h3>
-    <p><em>Year - Year</em></p>
+    <h3>Bachelor of Science in Computer Science - Siksha O Anusandhan  Deemed to be University</h3>
+    <p><em>2021 - 2025</em></p>
     <p>Relevant coursework:</p>
     <ul>
       <li>Introduction to Web Development</li>
@@ -135,19 +132,21 @@
 </div>
 <div id="projects">
     <h2 style="color: #007bff;">Projects</h2>
-    <h3>Personal Portfolio Website</h3>
-    <p><em>Link: <a href="https://www.example.com" target="_blank">https://www.example.com</a></em></p>
+    <h3>Personal Website</h3>
+    <p><em>Link: <a href="https://ayuu5h.github.io/" target="_blank">https://ayuu5h.github.io/</a></em></p>
     <p>A showcase of my web development projects and skills.</p>
 </div>
 <div id="contact">
     <div id="contact">
       <h2 style="color:#007bff;">Contact</h2>
       <p>Please feel free to contact me through email or phone for any inquiries or opportunities.</p>
-      <p><strong>Email:</strong> anonymous@example.com</p>
-      <p><strong>Phone:</strong> +1 123-456-7890</p>
+      <p><strong>Email:</strong> ayushstark17@gmail.com</p>
+      <p><strong>LinkedIn:</strong><a href="https://www.linkedin.com/in/ayush-kumar-8595001a0" target="_blank"> linkedin.com/in/ayush-kumar</a></p>
     </div>
 </div>
   </div>
+<a href="AyushKumar_2141011148_SOA.pdf" target="_blank">Resume PDF</a>
+
 </body>
 
 </html>
