--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </style>
 </head>
 
-<body style="background-color:;">
+<body style="background-color:powderblue;">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
